--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   postgis:
     image: postgis/postgis
-    container_name: postgis-container-nacional
+    container_name: postgiscontainer
     ports:
       - "5432:5432"
     environment:
@@ -14,7 +14,7 @@ services:
 
   pgadmin4:
     image: dpage/pgadmin4
-    container_name: pgadmin-container-nacional
+    container_name: pgadmincontainer
     ports:
       - "15432:80"
     environment:
