--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   postgis:
     image: postgis/postgis
@@ -24,6 +22,20 @@ services:
       - postgres-network
     restart: unless-stopped
 
+  redis:
+    image: redis/redis-stack
+    container_name: rediscontainer
+    ports:
+      - "6379:6379"
+      - "8001:8001"
+    volumes:
+      - redis-volumes:/data
+    networks:
+      - postgres-network
+    
 networks:
   postgres-network:
     driver: bridge
+
+volumes:
+  redis-volumes:
