--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "projeto-1-bancos-geogr-ficos-nacional",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@prisma/client": "^6.2.1",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "leaflet": "^1.9.4",
     "pg": "^8.13.1",
     "react": "^19.0.0",
